version/0.41/_sources/api/solver/_autosummary/settings/start_file_write.rst.txt
:orphan:

.. _start_file_write:

start_file_write
================

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.start_file_write
    :show-inheritance:

.. rubric:: Arguments

==========================================   =====================================================================================

Argument                                                                                                                   Summary

==========================================   =====================================================================================
:ref:`injections <injections_1>`                                                        Pick injections for DPM particle sampling.

:ref:`boundaries <boundaries_3>`                                                   Pick boundary face zones for particle sampling.

:ref:`lines <lines>`                                                                 Pick line surfaces for DPM particle sampling.

:ref:`planes <planes>`                                                              Pick plane surfaces for DPM particle sampling.

:ref:`op_udf <op_udf>`                                                                                The DPM sampling output UDF.

:ref:`append_sample <append_sample>`                                               Enable appending data to existing sample files.

:ref:`accumulate_rates <accumulate_rates>`       Enable accumulation of erosion and accretion rates over multiple tracking passes.

:ref:`sort_sample <sort_sample>`                                                               Enable writing sorted sample files.

==========================================   =====================================================================================

.. rubric:: Included in:

==================================================   ==============================================================

Parent                                                                                                      Summary

==================================================   ==============================================================
:ref:`sampling_and_erosion <sampling_and_erosion>`       Configure sampling of particle trajectory data for output.

==================================================   ==============================================================

